FIX: gap between watermarks switchers changed

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -591,7 +591,7 @@ label {
     }
 
     + .inner {
-      margin-top: 10px;
+      margin-top: 18px;
     }
   }
   .subtext {
